rfclint (0.5.8) distribution(s); urgency=low

	* Curses and Python 2.7 does not allow for any character above 128.  Remove all characters above that point
	* Expand help on some options

-- Jim Schaad <ietf@augustcellars.com>  Wed 11 July 2018 12:00:00 -0700

rfclint (0.5.8) distribution(s); urgency=low

	* Deal with curses and sections that are too big
	* Center context text when doing spell and duplicate checking
	* Fix bug when no spelling suggestions are present
	* Change undefined symbol errors for ABNF from error to warnings.

-- Jim Schaad <ietf@augustcellars.com>  Mon 9 July 2018 12:00:00 -0700

rfclint (0.5.6) distribution(s); urgency=low

	* Correct code to do checking of XML code fragments

-- Jim Schaad <ietf@augustcellars.com>  Mon 2 July 2018 12:00:00 -0700

rfclint (0.5.5) distribution(s); urgency=low

	* Separate duplicate detection from spell checking
	* Implement interactive duplicate detection both with and without curses
	* Implement interactive spell checking both with and without curses

-- Jim Schaad <ietf@augustcellars.com>  Tue 11 Jan 2018 12:00:00 -0700

rfclint (0.5.3) distribution(s); urgency=low

	* Display platform name when bap is not installed.
	* Correct cache clearing code

-- Jim Schaad <ietf@augustcellars.com>  Thur 26 Apr 2018 12:00:00 -0700

rfclint (0.5.2) distribution(s); urgency=low

	* Add test case for v2 dtd path searching

-- Jim Schaad <ietf@augustcellars.com>  Fri 30 Mar 2018 12:00:00 -0700

rfclint (0.5.1) distribution(s); urgency=low

	* Set up to all for publishing to PyPI

-- Jim Schaad <ietf@augustcellars.com>  Sun XX Mar 2018 19:00:00 -0800

rfclint (0.5.0) distribution(s); urgency=urgency

	* If ANBF program not found, then wrong name was printed
	* Allow for both hunspell and aspell to be used for spell checking
	* On windows, do not require the .exe extension to be specified
	* Enable characters outside of the ASCII range to be spell checked
	  This is not supported on all platforms and with all spell programs