@@ -8,6 +8,7 @@ import codecs
 import six
 from rfctools_common import log
 
+
 def ReplaceWithONE(exc):
     if isinstance(exc, UnicodeDecodeError):
         return u'\u0001'
@@ -24,12 +25,15 @@ class CursesCommon(object):
     def __init__(self, config):
         self.no_curses = False
         self.curses = None
-        
+
         self.interactive = False
 
         if config.options.output_filename is not None:
             self.interactive = True
         codecs.register_error('replaceWithONE', ReplaceWithONE)
+
+        self.skipArtwork = config.options.skip_artwork
+        self.skipCode = config.options.skip_code
 
     def initscr(self):
         self.A_REVERSE = 1
@@ -52,7 +56,6 @@ class CursesCommon(object):
             else:
                 log.warn("Unable to load CURSES for python")
 
-
     def endwin(self):
         if self.curses:
             try:
@@ -62,7 +65,7 @@ class CursesCommon(object):
                 self.curses = None
             except curses.error as e:
                 pass
-            
+
     def writeStringInit(self):
         self.lines = []
         self.hilight = []
@@ -117,7 +120,7 @@ class CursesCommon(object):
                     i += 1
                     continue
                 if i + offset >= lineCount:
-                    break;
+                    break
                 if i == self.reverse[1]:
                     self.curses.addstr(i + offset, 0, line[:self.reverse[0]], curses.A_NORMAL)
                     if self.reverse[1] == self.reverse[3]:
