@@ -1,0 +1,1 @@
+Tests\xmlfrag3.xml:9: XML fragment in source code found and is well defined.
