@@ -1,3 +1,9 @@
+rfclint (0.5.10) distribution(s); urgency=low
+
+	* Add --skip-code and --skip-artwork options to not do spell and duplicate checking on these elements.
+
+-- Jim Schaad <ietf@augustcellars.com>  Mon 3 Sept 2018 12:00:00 -0700
+
 rfclint (0.5.8) distribution(s); urgency=low
 
 	* Curses and Python 2.7 does not allow for any character above 128.  Remove all characters above that point
